--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -58,6 +58,7 @@
     <Compile Include="connectWindow.xaml.cs">
       <DependentUpon>connectWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MutablePair.cs" />
     <Compile Include="PropertyChangedExtendedEventArgs.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="transparentWin.xaml.cs">
